refactor: update Umami analytics
- Updated pre-commit hooks

--- a/index.html
+++ b/index.html
@@ -109,11 +109,7 @@
   </script>
   <!--//schema-->
 
-  <script async defer
-    src="https://pizidavi-analytics.vercel.app/umami.js"
-    data-website-id="0eace1b9-7cd5-432b-96ac-a4918ab2971b"
-    data-domains="ultimateverona.it"
-  ></script>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="493ccd95-c9e6-4a8c-a9d0-b6b36aa59d8f"></script>
 </head>
 <body>
   <noscript>Questo sito necessita di Javascript per funzionare</noscript>
@@ -160,7 +156,8 @@
       <div class="more-button">
         <div class="button">
           <a href="#small-dialog"
-            class="play-icon popup-with-zoom-anim umami--click--watch-video"
+            class="play-icon popup-with-zoom-anim"
+            data-umami-event="watch-video"
           >
             <i class="fa-regular fa-circle-play video-w3ls"></i>
             <span class="video-text"><i>Guarda</i><br>il video</span>
@@ -179,7 +176,8 @@
   <!-- Info -->
   <div class="banner-bottom">
     <a href="mailto:discover.cusverona@gmail.com"
-      class="bnr-btm-grids-agileits umami--click--open-email"
+      class="bnr-btm-grids-agileits"
+      data-umami-event="open-email"
     >
       <div class="bnr-btm-icon">
         <i class="fa-solid fa-envelope"></i>
@@ -190,8 +188,9 @@
       </div>
     </a>
     <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
-      class="bnr-btm-grids-agileits umami--click--open-maps"
+      class="bnr-btm-grids-agileits"
       title="Google Maps" target="_blank" rel="noopener"
+      data-umami-event="open-maps"
     >
       <div class="bnr-btm-icon">
         <i class="fa-solid fa-location-dot"></i>
@@ -210,15 +209,15 @@
         <ul class="social-agileinfo">
           <li>
             <a href="https://www.facebook.com/DiscoverUltimateVerona"
-              class="umami--click--open-facebook"
               title="Facebook" target="_blank" rel="noopener"
+              data-umami-event="open-facebook"
             ><i class="fa-brands fa-facebook-f"></i>
             </a>
           </li>
           <li>
             <a href="https://www.instagram.com/discover.ultimate.verona"
-              class="umami--click--open-instagram"
               title="Instagram" target="_blank" rel="noopener"
+              data-umami-event="open-instagram"
             ><i class="fa-brands fa-instagram"></i>
             </a>
           </li>
@@ -254,7 +253,8 @@
                 simili ad altri sport, che non prevede il contatto fisico e dai risvolti educativi eccezionali.
               </p>
               <a href="https://flyingdisc.it/ultimate/"
-                class="read-agileits umami--click--read-more-tab0" target="_blank" rel="noopener"
+                class="read-agileits" target="_blank" rel="noopener"
+                data-umami-event="read-more-tab0"
                 >Read More</a>
             </div>
           </div>
@@ -270,7 +270,8 @@
                 Chi è in possesso del disco non può correre.
               </p>
               <a href="https://flyingdisc.it/ultimate/come-si-gioca/"
-                class="read-agileits umami--click--read-more-tab1" target="_blank" rel="noopener"
+                class="read-agileits" target="_blank" rel="noopener"
+                data-umami-event="read-more-tab1"
                 >Read More</a>
             </div>
             <div class="col-sm-12 col-md-6">
@@ -337,7 +338,10 @@
                 Matteo Prandi - 3315821893 - discover.cusverona@gmail.com
               </p>
               <p class="mt-5 text-center">
-                <a href="https://forms.gle/5er6bYdn8QQ6g4LLA" class="read-agileits umami--click--junior-2026" target="_blank" rel="noopener">
+                <a href="https://forms.gle/5er6bYdn8QQ6g4LLA"
+                  class="read-agileits" target="_blank" rel="noopener"
+                  data-umami-event="pre-register-junior-2026"
+                >
                   Effettua la pre-iscrizione!
                 </a>
                 <span class="mt-4" style="font-size: 80%;display: block;">
@@ -395,9 +399,9 @@
       </h2>
       <div class="row justify-content-center">
         <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
-          class="col-sm-12 col-md-6 col-lg-4 about-w3-grids umami--click--open-maps"
-          target="_blank"
-          rel="noopener"
+          class="col-sm-12 col-md-6 col-lg-4 about-w3-grids"
+          target="_blank" rel="noopener"
+          data-umami-event="open-maps"
         >
           <div class="trust-icon-w3ls">
             <i class="fa fa-user" aria-hidden="true"></i>
@@ -410,9 +414,9 @@
           <small class="d-block mt-3">4 allenamenti di prova</small>
         </a>
         <a href="https://goo.gl/maps/yFJq3i7R1nDyJrof7"
-          class="col-sm-12 col-md-6 col-lg-4 about-w3-grids umami--click--open-maps"
-          target="_blank"
-          rel="noopener"
+          class="col-sm-12 col-md-6 col-lg-4 about-w3-grids"
+          target="_blank" rel="noopener"
+          data-umami-event="open-maps"
         >
           <div class="trust-icon-w3ls">
             <i class="fa fa-user" aria-hidden="true"></i>
@@ -495,14 +499,14 @@
             <li>
               <i class="fa fa-tint"></i>
               <a href="https://flyingdisc.it"
-                class="umami--click--open-flyingdisc"
                 target="_blank" rel="noopener"
+                data-umami-event="open-flyingdisc"
                 >Sito Web</a>
             </li>
             <li>
               <i class="fa fa-tint"></i>
               <a href="https://flyingdisc.it/campionati-2025/"
-                class="umami--click--open-flyingdisc-campionati-2025"
+                data-umami-event="open-flyingdisc-campionati-2025"
                 target="_blank" rel="noopener"
                 >Campionati Italiani 2025</a>
             </li>
@@ -516,15 +520,15 @@
             <li>
               <i class="fa fa-tint"></i>
               <a href="https://wfdf.sport"
-                class="umami--click--open-wfdf"
                 target="_blank" rel="noopener"
+                data-umami-event="open-wfdf"
                 >Sito Web</a>
             </li>
             <li>
               <i class="fa fa-tint"></i>
               <a href="https://rules.wfdf.sport/accreditation"
-                class="umami--click--open-wfdf-accreditation"
                 target="_blank" rel="noopener"
+                data-umami-event="open-wfdf-accreditation"
                 >Accreditation</a>
             </li>
           </ul>
@@ -537,15 +541,15 @@
             <li>
               <i class="fa fa-tint"></i>
               <a href="https://www.cusverona.it"
-                class="umami--click--open-cus"
                 target="_blank" rel="noopener"
+                data-umami-event="open-cus"
                 >Sito Web</a>
             </li>
             <li>
               <i class="fa fa-tint"></i>
               <a href="https://servizi.cusverona.it/Tesseramento_CUS"
-                class="umami--click--open-cus-tesseramento"
                 target="_blank" rel="noopener"
+                data-umami-event="open-cus-tesseramento"
                 >Tesseramento</a>
             </li>
           </ul>
@@ -557,7 +561,7 @@
         <p>© <span id="year">2024</span> Discover Ultimate CUS Verona</p>
       </div>
       <div class="agileinfo_copyright p-0">
-        <p>© 2017 Plunge. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank" rel="noopener noreferrer nofollow" class="umami--click--open-W3layouts">W3layouts</a></p>
+        <p>© 2017 Plunge. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank" rel="noopener noreferrer nofollow" data-umami-event="open-W3layouts">W3layouts</a></p>
       </div>
     </div>
   </div>
